--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,21 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/coffee
 excludes=
+file.reference.guava-30.0-jre.jar=C:\\Users\\maith\\Downloads\\sqljdbc_12.10.0.0_enu\\guava-30.0-jre.jar
+file.reference.jackson-annotations-3.0-rc5.jar=C:\\Users\\maith\\Downloads\\jackson-annotations-3.0-rc5.jar
+file.reference.jackson-core-2.19.0.jar=C:\\Users\\maith\\Downloads\\jackson-core-2.19.0.jar
+file.reference.jackson-databind-2.19.0.jar=C:\\Users\\maith\\Downloads\\jackson-databind-2.19.0.jar
+file.reference.json-20250517.jar=C:\\Users\\maith\\Downloads\\json-20250517.jar
 file.reference.mssql-jdbc-12.10.0.jre11.jar=C:\\Users\\maith\\Downloads\\sqljdbc_12.10.0.0_enu\\sqljdbc_12.10\\enu\\jars\\mssql-jdbc-12.10.0.jre11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-12.10.0.jre11.jar}
+    ${file.reference.mssql-jdbc-12.10.0.jre11.jar}:\
+    ${file.reference.guava-30.0-jre.jar}:\
+    ${file.reference.jackson-annotations-3.0-rc5.jar}:\
+    ${file.reference.jackson-core-2.19.0.jar}:\
+    ${file.reference.jackson-databind-2.19.0.jar}:\
+    ${file.reference.json-20250517.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
