--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=coffee
+application.vendor=ADMIN
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,27 +33,33 @@ dist.jar=${dist.dir}/coffee.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/coffee
+endorsed.classpath=
 excludes=
-file.reference.guava-30.0-jre.jar=C:\\Users\\maith\\Downloads\\sqljdbc_12.10.0.0_enu\\guava-30.0-jre.jar
-file.reference.jackson-annotations-3.0-rc5.jar=C:\\Users\\maith\\Downloads\\jackson-annotations-3.0-rc5.jar
-file.reference.jackson-core-2.19.0.jar=C:\\Users\\maith\\Downloads\\jackson-core-2.19.0.jar
-file.reference.jackson-databind-2.19.0.jar=C:\\Users\\maith\\Downloads\\jackson-databind-2.19.0.jar
-file.reference.json-20250517.jar=C:\\Users\\maith\\Downloads\\json-20250517.jar
-file.reference.mssql-jdbc-12.10.0.jre11.jar=C:\\Users\\maith\\Downloads\\sqljdbc_12.10.0.0_enu\\sqljdbc_12.10\\enu\\jars\\mssql-jdbc-12.10.0.jre11.jar
+file.reference.-jarpackages=D:\\jarpackages
+file.reference.jackson-annotations-3.0-rc5.jar=D:\\jarpackages\\jackson-annotations-3.0-rc5.jar
+file.reference.jackson-core-2.19.0.jar=D:\\jarpackages\\jackson-core-2.19.0.jar
+file.reference.jackson-databind-2.19.0.jar=D:\\jarpackages\\jackson-databind-2.19.0.jar
+file.reference.json-20250517.jar=D:\\jarpackages\\json-20250517.jar
+file.reference.mssql-jdbc-12.10.0.jre11.jar=D:\\jarpackages\\mssql-jdbc-12.10.0.jre11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-12.10.0.jre11.jar}:\
-    ${file.reference.guava-30.0-jre.jar}:\
+    ${file.reference.-jarpackages}:\
     ${file.reference.jackson-annotations-3.0-rc5.jar}:\
     ${file.reference.jackson-core-2.19.0.jar}:\
     ${file.reference.jackson-databind-2.19.0.jar}:\
-    ${file.reference.json-20250517.jar}
+    ${file.reference.json-20250517.jar}:\
+    ${file.reference.mssql-jdbc-12.10.0.jre11.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=\ --enable-preview
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=
+javac.modulepath=\
+    ${file.reference.jackson-annotations-3.0-rc5.jar}:\
+    ${file.reference.jackson-core-2.19.0.jar}:\
+    ${file.reference.jackson-databind-2.19.0.jar}:\
+    ${file.reference.json-20250517.jar}:\
+    ${file.reference.mssql-jdbc-12.10.0.jre11.jar}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
@@ -87,14 +94,14 @@ main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_21
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=\ --enable-preview
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
