integrate panel into home JFrame

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,10 +37,15 @@ endorsed.classpath=
 excludes=
 file.reference.-jarpackages=D:\\jarpackages
 file.reference.jackson-annotations-3.0-rc5.jar=D:\\jarpackages\\jackson-annotations-3.0-rc5.jar
+file.reference.jackson-annotations-3.0-rc5.jar-1=C:\\Users\\maith\\OneDrive\\Documents\\NetBeansProjects\\coffee\\jarpackages\\jackson-annotations-3.0-rc5.jar
 file.reference.jackson-core-2.19.0.jar=D:\\jarpackages\\jackson-core-2.19.0.jar
+file.reference.jackson-core-2.19.0.jar-1=C:\\Users\\maith\\OneDrive\\Documents\\NetBeansProjects\\coffee\\jarpackages\\jackson-core-2.19.0.jar
 file.reference.jackson-databind-2.19.0.jar=D:\\jarpackages\\jackson-databind-2.19.0.jar
+file.reference.jackson-databind-2.19.0.jar-1=C:\\Users\\maith\\OneDrive\\Documents\\NetBeansProjects\\coffee\\jarpackages\\jackson-databind-2.19.0.jar
 file.reference.json-20250517.jar=D:\\jarpackages\\json-20250517.jar
+file.reference.json-20250517.jar-1=C:\\Users\\maith\\OneDrive\\Documents\\NetBeansProjects\\coffee\\jarpackages\\json-20250517.jar
 file.reference.mssql-jdbc-12.10.0.jre11.jar=D:\\jarpackages\\mssql-jdbc-12.10.0.jre11.jar
+file.reference.mssql-jdbc-12.10.0.jre11.jar-1=C:\\Users\\maith\\OneDrive\\Documents\\NetBeansProjects\\coffee\\jarpackages\\mssql-jdbc-12.10.0.jre11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -49,7 +54,12 @@ javac.classpath=\
     ${file.reference.jackson-core-2.19.0.jar}:\
     ${file.reference.jackson-databind-2.19.0.jar}:\
     ${file.reference.json-20250517.jar}:\
-    ${file.reference.mssql-jdbc-12.10.0.jre11.jar}
+    ${file.reference.mssql-jdbc-12.10.0.jre11.jar}:\
+    ${file.reference.jackson-annotations-3.0-rc5.jar-1}:\
+    ${file.reference.jackson-core-2.19.0.jar-1}:\
+    ${file.reference.jackson-databind-2.19.0.jar-1}:\
+    ${file.reference.json-20250517.jar-1}:\
+    ${file.reference.mssql-jdbc-12.10.0.jre11.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
@@ -94,7 +104,7 @@ main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_21
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
