integrated product to home and added log out feature

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,14 +38,19 @@ excludes=
 file.reference.guava-30.0-jre.jar=C:\\Users\\maith\\Downloads\\sqljdbc_12.10.0.0_enu\\guava-30.0-jre.jar
 file.reference.jackson-annotations-3.0-rc5.jar=C:\\Users\\maith\\Downloads\\jackson-annotations-3.0-rc5.jar
 file.reference.jackson-annotations-3.0-rc5.jar-1=D:\\jarpackages\\jackson-annotations-3.0-rc5.jar
+file.reference.jackson-annotations-3.0-rc5.jar-2=C:\\Users\\pc\\Downloads\\jarpackages\\jarpackages\\jackson-annotations-3.0-rc5.jar
 file.reference.jackson-core-2.19.0.jar=C:\\Users\\maith\\Downloads\\jackson-core-2.19.0.jar
 file.reference.jackson-core-2.19.0.jar-1=D:\\jarpackages\\jackson-core-2.19.0.jar
+file.reference.jackson-core-2.19.0.jar-2=C:\\Users\\pc\\Downloads\\jarpackages\\jarpackages\\jackson-core-2.19.0.jar
 file.reference.jackson-databind-2.19.0.jar=C:\\Users\\maith\\Downloads\\jackson-databind-2.19.0.jar
 file.reference.jackson-databind-2.19.0.jar-1=D:\\jarpackages\\jackson-databind-2.19.0.jar
+file.reference.jackson-databind-2.19.0.jar-2=C:\\Users\\pc\\Downloads\\jarpackages\\jarpackages\\jackson-databind-2.19.0.jar
 file.reference.json-20250517.jar=C:\\Users\\maith\\Downloads\\json-20250517.jar
 file.reference.json-20250517.jar-1=D:\\jarpackages\\json-20250517.jar
+file.reference.json-20250517.jar-2=C:\\Users\\pc\\Downloads\\jarpackages\\jarpackages\\json-20250517.jar
 file.reference.mssql-jdbc-12.10.0.jre11.jar=C:\\Users\\maith\\Downloads\\sqljdbc_12.10.0.0_enu\\sqljdbc_12.10\\enu\\jars\\mssql-jdbc-12.10.0.jre11.jar
 file.reference.mssql-jdbc-12.10.0.jre11.jar-1=D:\\jarpackages\\mssql-jdbc-12.10.0.jre11.jar
+file.reference.mssql-jdbc-12.10.0.jre11.jar-2=C:\\Users\\pc\\Downloads\\jarpackages\\jarpackages\\mssql-jdbc-12.10.0.jre11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -59,7 +64,12 @@ javac.classpath=\
     ${file.reference.jackson-core-2.19.0.jar-1}:\
     ${file.reference.jackson-databind-2.19.0.jar-1}:\
     ${file.reference.json-20250517.jar-1}:\
-    ${file.reference.mssql-jdbc-12.10.0.jre11.jar-1}
+    ${file.reference.mssql-jdbc-12.10.0.jre11.jar-1}:\
+    ${file.reference.jackson-annotations-3.0-rc5.jar-2}:\
+    ${file.reference.jackson-core-2.19.0.jar-2}:\
+    ${file.reference.jackson-databind-2.19.0.jar-2}:\
+    ${file.reference.json-20250517.jar-2}:\
+    ${file.reference.mssql-jdbc-12.10.0.jre11.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
