unfinished recipt printing

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -67,7 +67,12 @@ file.reference.mssql-jdbc-12.10.0.jre11.jar-3=C:\\Users\\maith\\OneDrive\\Docume
 includes=**
 jar.compress=false
 javac.classpath=\
-<<<<<<< HEAD
+    <<<<<<< HEAD:\
+    ${file.reference.jackson-annotations-3.0-rc5.jar-3}:\
+    ${file.reference.jackson-core-2.19.0.jar-3}:\
+    ${file.reference.jackson-databind-2.19.0.jar-3}:\
+    ${file.reference.json-20250517.jar-3}:\
+    ${file.reference.mssql-jdbc-12.10.0.jre11.jar-3}
 =======
     ${file.reference.-jarpackages}:\
     ${file.reference.jackson-annotations-3.0-rc5.jar}:\
